--- a/SandBox.vcxproj
+++ b/SandBox.vcxproj
@@ -80,12 +80,14 @@
   <ItemGroup>
     <ClCompile Include="Algorithms.cpp" />
     <ClCompile Include="DataStructures.cpp" />
-    <ClCompile Include="Polygon.cpp" />
+    <ClCompile Include="Program.cpp" />
     <ClCompile Include="Stepic.cpp" />
+    <ClCompile Include="Tests.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Algorithms.h" />
     <ClInclude Include="DataStructures.h" />
+    <ClInclude Include="Tests.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
